Update doc and README

--- a/集合-数据结构相关.md
+++ b/集合-数据结构相关.md
@@ -97,7 +97,7 @@ public class Test2 {
 
 ####          **此为超出10时源码过程**：
 
-![image-20250425165743512](imgh/image-20250425165743512.png)
+![image-20250425165743512](https://gitee.com/icecat2233/picture/raw/master/20250425170258008.png)
 
 ## LinkedList特有方法
 
